# macos-vm-templates

./: .gitignore  pyproject.toml
prepare_iso/: prepare_iso.sh
scripts/: parallels.sh  puppet.sh  vagrant.sh  vmware.sh  xcode-cli-tools.sh
scripts/support/: set_kcpassword.py
